--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,14 @@
 services:
   discord-redirect:
-    image: traefik/whoami  # Ein einfacher Webserver zur Demo
+    image: traefik/whoami
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/"]
+      start_period: 20s
+      start_interval: 5s
+      interval: 20s
+      timeout: 1m
+      retries: 3
     labels:
       traefik.enable: true
 
